CDE-2568 fix scrollbar and full screen

--- a/modules/_app/navigation/navigation.component.scss
+++ b/modules/_app/navigation/navigation.component.scss
@@ -96,7 +96,7 @@ mat-toolbar {
   }
 }
 
-.navBarButton, #username_link {
+.navBarButton, #login_link, #username_link {
   font-size: 14px;
 
   mat-icon {
